[package]
name = "superposition"
version = "0.1.0"
authors = ["Robert Winslow (Finite Automata) <robert@eradb.com>"]
edition = "2018"
description = "Verify concurrent behavior of real code using finite-space model checking."
publish = false

[dependencies]
async-task = "3"
concurrent-queue = "1"
futures-intrusive = { version = "0.3", default-features = false, features = [ "alloc" ] }
futures-lite = "0.1"
futures-util = "*"
itertools = "0.9"
pin-project-lite = "0.1"
spin = "0.5"
thiserror = "1"

[dev-dependencies]
impls = "1"

[profile.test]
opt-level = 2
