[package]
name = "superposition"
version = "0.1.0"
authors = ["Robert Winslow (Finite Automata) <robert@eradb.com>"]
edition = "2021"
description = "Verify concurrent behavior of real code using finite-space model checking."
publish = false

[dependencies]
futures-intrusive = { version = "0.4", default-features = false, features = [ "alloc", "std" ] }
futures-lite = "1.12"
futures-util = "0.3"
pin-project-lite = "0.2"
thiserror = "1"

[dev-dependencies]
criterion = "0.3.3"
impls = "1"
# disable mimalloc's security features
mimalloc = { version = "0.1", default-features = false }

[profile.test]
opt-level = 2

[profile.bench]
debug = true

[[bench]]
name = "dfs_overhead"
harness = false

[[bench]]
name = "futures_executor"
harness = false

[[bench]]
name = "futures_simulator_dfs"
harness = false
